eliminated dynamic robotAutonomous class lookup, used simplified RobotMotionSequencerSet instead, used MethodHandles for logger setup